samples/ut/overloading/signed/LongFail01.err
LongFail01.z2(5, 9): error: class 'org.z2legacy.samples.ut.overloading.LongFail01' does not have an overload
	test(sys.core.numeric.Long)
existing overloads
	test(sys.core.numeric.Byte)
	test(sys.core.numeric.Word)
	test(sys.core.numeric.DWord)
	test(sys.core.numeric.QWord)
	test(sys.core.numeric.Small)
	test(sys.core.numeric.Short)
	test(sys.core.numeric.Int)
	test(sys.core.numeric.Float)
	test(sys.core.numeric.Double)
	test(sys.core.numeric.Char)
	test(sys.core.numeric.PtrSize)